--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,6 +37,13 @@ twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
 
+assetic:
+    debug:          '%kernel.debug%'
+    use_controller: '%kernel.debug%'
+    filters:
+        cssrewrite: ~
+        jsqueeze: ~
+
 # Doctrine Configuration
 doctrine:
     dbal:
